--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
         "lazyjsonmapper/lazyjsonmapper": "^1.2",
-        "mgp25/instagram-php": "dev-master",
+        "lloydyeo/instagram-api": "dev-master",
         "paypal/rest-api-sdk-php": "*",
         "sendgrid/sendgrid": "^6.0",
         "unicodeveloper/laravel-emoji": "^1.0",
@@ -35,7 +35,7 @@
         ],
         "psr-4": {
             "App\\": "app/",
-            "InstagramAPI\\": "vendor/mgp25/instagram-php/src/"
+            "InstagramAPI\\": "vendor/lloydyeo/instagram-php/src/"
         }
     },
     "autoload-dev": {
