--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "lazyjsonmapper/lazyjsonmapper": "^1.2",
         "lloydyeo/instagram-api": "dev-master",
         "paypal/rest-api-sdk-php": "*",
+        "riverskies/laravel-mobile-detect": "^1.3",
         "sendgrid/sendgrid": "^6.0",
         "unicodeveloper/laravel-emoji": "^1.0",
         "webpatser/laravel-uuid": "2.*",
