--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "arcanedev/log-viewer": "^4.5",
         "aweber/aweber": "^1.1",
+        "barryvdh/laravel-debugbar": "^3.1",
         "braintree/braintree_php": "^3.25",
         "emojione/emojione": "^2.2",
         "guzzlehttp/guzzle": "^6.2",
